--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                                 <div class="dropdown-menu">
                                     <ul>
                                         <!-- <li><a href="gallery.html">Gallery</a></li> -->
-                                        <li><a href="single-portfolio-public_relations.html">Communication and Graphic ArtWork</a></li>
+                                        <li><a href="single-portfolio-public_relations.html">Communication & Graphic Design</a></li>
                                         <li><a href="single-portfolio-social-media.html">Social Media</a></li>
                                         <li><a href="single-portfolio-coding.html">Coding</a></li>
 
@@ -153,14 +153,16 @@
                         </div>
                         <div class="col-md-6">
                             <div class="block">
-                                <h3 class="subtitle wow fadeInUp" data-wow-delay=".3s" data-wow-duration="500ms">My Background</h3>
+                             <h3 class="subtitle wow fadeInUp" data-wow-delay=".3s" data-wow-duration="500ms">My Background</h3>
                                 <p class="wow fadeInUp" data-wow-delay=".5s" data-wow-duration="500ms"> I believe anything worth doing is worth doing well. </p>
-                                <p class="wow fadeInUp" data-wow-delay=".5s" data-wow-duration="500ms">I am currently a student at the University of Saint Francis set to graduate with a degree in Communications and Public Relations in 2019. </p>
-                                <p class="wow fadeInUp" data-wow-delay=".7s" data-wow-duration="500ms">I am versatile, adaptable and driven. I have both strong written and interpersonal communications skills. I have done work in design, programming, and marketing, and have worked with audio engineers and hold an industry gold badge from Elven Fifty Coding Academy. With this wide range of experience, I am uniquely qualified in the field of communication. </p>
-                                <p class="wow fadeInUp" data-wow-delay=".7s" data-wow-duration="500ms">I recived my gold badge from Eleven Fifty in June of 2017, after taking a four week class put on by The Independant Collages of Indiana.</p>
-                                <p class="wow fadeInUp" data-wow-delay=".8s" data-wow-duration="500ms">I am seeking an internship working in Social Media, Public Relations, or cross-functional communication. </p>
-                                <p> <a href="Resume-Fall-2018-Nanette-Ambrose.pdf"><h5> My Resume </h5></a></p>
+                                <p class="wow fadeInUp" data-wow-delay=".5s" data-wow-duration="500ms">I recently graduated from the University of Saint Francis with a bachelor's degree in Communications with a concentration in Public Relations. </p>
+                                <p class="wow fadeInUp" data-wow-delay=".7s" data-wow-duration="500ms">I am versatile, adaptable and driven. I have both strong written and interpersonal communications skills. I have done work in design, programming, and marketing, and have worked with audio engineers and hold an industry gold badge from Eleven Fifty Coding Academy. With this wide range of experience, I am uniquely qualified in the field of communication. </p>
+                                <p class="wow fadeInUp" data-wow-delay=".7s" data-wow-duration="500ms">I received my gold badge from Eleven Fifty in June of 2017, after taking a four week class put on by The Independent Colleges of Indiana.</p>
+                                <p class="wow fadeInUp" data-wow-delay=".8s" data-wow-duration="500ms">I am seeking work in Social Media, Public Relations, Sales, and related fields. </p>
+                                <p> <a href="Resume_2019_Nanette_Ambrose.pdf"><h5> My Resume </h5></a></p>
                                 <p><a href="https://www.linkedin.com/in/nanette-ambrose-7a80b611b/"><h5> Linkedin</h5></a></p>
+
+
 
                             </div>
                         </div>
