--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                                 <div class="dropdown-menu">
                                     <ul>
                                         <!-- <li><a href="gallery.html">Gallery</a></li> -->
-                                        <li><a href="single-portfolio-public_relations.html">Communication and Graphic ArtWork</a></li>
+                                        <li><a href="single-portfolio-public_relations.html">Communication & Graphic Design</a></li>
                                         <li><a href="single-portfolio-social-media.html">Social Media</a></li>
                                         <li><a href="single-portfolio-coding.html">Coding</a></li>
 
