--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <div class="dropdown-menu">
                                     <ul>
                                         <!-- <li><a href="gallery.html">Gallery</a></li> -->
-                                        <li><a href="single-portfolio-public_relations.html">Communication and Graphic ArtWork</a></li>
+                                        <li><a href="single-portfolio-public_relations.html">Communication & Graphic Design</a></li>
                                         <li><a href="single-portfolio-social-media.html">Social Media</a></li>
                                         <li><a href="single-portfolio-coding.html">Coding</a></li>
 
@@ -140,7 +140,7 @@
                             </section> <!-- cd-intro -->
                             <!-- /.slider -->
                             <h2 class="wow fadeInUp animated" data-wow-delay=".6s" >
-                                I am studying communications and public relations set to graduate in 2019 from the University of Saint Francis.<br> This site showcases different projects I have done.
+                                I am a recent graduate from The University of Saint Francis with a bachelors in communication<br> This site showcases different projects I have done.
                             </h2>
                             <a class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" data-wow-delay=".9s" href="#works" data-section="#works" >View Works</a>
 
@@ -165,10 +165,10 @@
                                     I believe anything worth doing is worth doing well.
                                 </p>
                                 <p>
-                                    I am versatile, adaptable and driven. I have both strong written and interpersonal communications skills. I have worked in social media managment, and digital communication, design, programming, marketing, and have worked with audio engineers. I have an industry gold badge from Eleven Fifty Coding Academy. With this wide range of experience, I am uniquely qualified in the field of communication.
+                                    I am versatile, adaptable and driven. I have both strong written and interpersonal communications skills. I have work managing muliple social media acounts, and achieved excellence in direct marketing. I have been trained in digital design and programming, with an industry gold badge from Eleven Fifty Coding Academy. This wide range of experience, makes me uniquely qualified in the field of communication.
                                 </p>
-                                <p>I am seeking a position in Social Media, Public Relations, or cross-functional communication.</p>
-                                <p> <a href="Resume-Fall-2018-Nanette-Ambrose.pdf"><h5> My Resume </h5></a></p>
+                                <p>I am seeking work in Social Media, Public Relations, Sales, and related fields.</p>
+                                <p> <a href="Resume_2019_Nanette_Ambrose.pdf"><h5> My Resume </h5></a></p>
                                 <p><a href="https://www.linkedin.com/in/nanette-ambrose-7a80b611b/"><h5> Linkedin</h5></a></p>
                             </div>
                             
@@ -208,7 +208,7 @@
                             <figcaption>
                                 <h4>
                                     <a href="single-portfolio-public_relations.html">
-                                        Communication & Graphic Work
+                                        Communication & Graphic Design
                                     </a>
                                 </h4>
                                 <p>
@@ -256,7 +256,7 @@
                             <figcaption>
                                 <h4>
                                     <a href="single-portfolio-coding.html">
-                                        Coding Work
+                                        Coding
                                     </a>
                                 </h4>
                                 <p>
