--- a/single-portfolio-coding.html
+++ b/single-portfolio-coding.html
@@ -92,7 +92,7 @@
                                 <div class="dropdown-menu">
                                     <ul>
                                         <!-- <li><a href="gallery.html">Gallery</a></li> -->
-                                        <li><a href="single-portfolio-public_relations.html">Communication and Graphic ArtWork</a></li>
+                                        <li><a href="single-portfolio-public_relations.html">Communication & Graphic Design</a></li>
                                         <li><a href="single-portfolio-social-media.html">Social Media</a></li>
                                         <li><a href="single-portfolio-coding.html">Coding</a></li>
 
@@ -144,12 +144,12 @@
                                 <img class="img-responsive" alt="" src="images/portfolio/code_pic.png">
                             </div>
                             <div class="portfolio-content">
-                            <p>In the summer of 2017 I had the opportunity to take a month-long training course in computer coding from Eleven Fifty Academy where I learned the basics of coding in HTML, CSS, and JavaScript, and received an Industry Gold Badge. This digital portfolio was the final project for that course. While there I completed several other projects that can be view below. </p>
+                            <p>In the summer of 2017 I had the opportunity to take a month-long training course in computer coding from Eleven Fifty Academy where I learned the basics of coding in HTML, CSS, and JavaScript, and received an Industry Gold Badge. This digital portfolio was the final project for that course. All the work I completed in that course can be viewed below. </p>
                             </div>
                             <div class="portfolio-content">
                                 <a href="HTML_storefront/Store_Front.html">Mock Store Front</a>
                                 <p>
-                                    One of the many projects I completed getting my gold badge from Eleven Fifty Academy. This humorous mock store front was done entirely with html and bootstrap, while html is by no means my specialty, I do have an understanding of the language. While at the ICI and eleven fifty training program, I worked highly talented people from a variety of different majors, with talents and expiries. We would often help each other with our projects, working together to complete our work.
+                                   This humorous mock store front was done entirely with html and bootstrap.
                                 </p>
                                 <p>
                                     <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis expedita repellendus laboriosam aliquid. Neque doloribus ea, id reprehenderit alias saepe debitis eligendi molestias odit, nesciunt rem. Dolorem saepe, provident dolore nesciunt laudantium nostrum enim natus veritatis harum maxime et iure ratione, nulla. Minus excepturi commodi tempore voluptate. Blanditiis similique dolor asperiores ex excepturi perspiciatis, dolores id esse. Voluptate beatae nesciunt cum esse ratione officiis necessitatibus blanditiis ea, laboriosam fugit vero maxime? Voluptatum illo dolorum autem pariatur quisquam. Voluptates soluta culpa necessitatibus veritatis tempora incidunt doloribus placeat repellat et facilis eum sapiente fugit numquam aut, laboriosam aspernatur, esse, magnam excepturi repudiandae amet voluptas nulla quidem. Veritatis nisi consequuntur saepe qui quisquam dignissimos assumenda, iusto odio. Dignissimos reprehenderit esse iusto cupiditate nisi enim, animi similique itaque, perspiciatis error qui. Aperiam, architecto provident. -->
@@ -159,7 +159,7 @@
                             <div class="portfolio-content">
                                 <a href="https://github.com/NayNay811/Java-Library">JavaScript Library</a>
                                 <p>
-                                    This is a library of Java script commands and functions I learned while gaining my gold badge from Eleven Fifty Academy, and shows my understanding of the language. While at the ICI and eleven fifty training program, I worked highly talented people from a variety of different majors, with talents and expiries. We would often help each other with our projects, working together to complete our work.
+                                    This is a library of Javascript commands and functions I learned while gaining my gold badge from Eleven Fifty Academy, and shows my understanding of the language.
                                 </p>
                                 <p>
                                     <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis expedita repellendus laboriosam aliquid. Neque doloribus ea, id reprehenderit alias saepe debitis eligendi molestias odit, nesciunt rem. Dolorem saepe, provident dolore nesciunt laudantium nostrum enim natus veritatis harum maxime et iure ratione, nulla. Minus excepturi commodi tempore voluptate. Blanditiis similique dolor asperiores ex excepturi perspiciatis, dolores id esse. Voluptate beatae nesciunt cum esse ratione officiis necessitatibus blanditiis ea, laboriosam fugit vero maxime? Voluptatum illo dolorum autem pariatur quisquam. Voluptates soluta culpa necessitatibus veritatis tempora incidunt doloribus placeat repellat et facilis eum sapiente fugit numquam aut, laboriosam aspernatur, esse, magnam excepturi repudiandae amet voluptas nulla quidem. Veritatis nisi consequuntur saepe qui quisquam dignissimos assumenda, iusto odio. Dignissimos reprehenderit esse iusto cupiditate nisi enim, animi similique itaque, perspiciatis error qui. Aperiam, architecto provident. -->
@@ -169,7 +169,7 @@
                             <div class="portfolio-content">
                                 <a href="https://codepen.io/NayNay811/pen/OgVmMM">CSS Creature</a>
                                 <p>
-                                    This CSS picture I created while getting my gold badge from Eleven Fifty Academy. I have competencies in CSS, and while coding CSS in not my specialty, I have an understanding of the language. While at the ICI and eleven fifty training program, I worked highly talented people from a variety of different majors, with talents and expiries. We would often help each other with our projects, working together to complete our work.
+                                    This CSS picture I created while getting my gold badge from Eleven Fifty Academy.
                                 </p>
                                 <p>
                                  <!--    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis expedita repellendus laboriosam aliquid. Neque doloribus ea, id reprehenderit alias saepe debitis eligendi molestias odit, nesciunt rem. Dolorem saepe, provident dolore nesciunt laudantium nostrum enim natus veritatis harum maxime et iure ratione, nulla. Minus excepturi commodi tempore voluptate. Blanditiis similique dolor asperiores ex excepturi perspiciatis, dolores id esse. Voluptate beatae nesciunt cum esse ratione officiis necessitatibus blanditiis ea, laboriosam fugit vero maxime? Voluptatum illo dolorum autem pariatur quisquam. Voluptates soluta culpa necessitatibus veritatis tempora incidunt doloribus placeat repellat et facilis eum sapiente fugit numquam aut, laboriosam aspernatur, esse, magnam excepturi repudiandae amet voluptas nulla quidem. Veritatis nisi consequuntur saepe qui quisquam dignissimos assumenda, iusto odio. Dignissimos reprehenderit esse iusto cupiditate nisi enim, animi similique itaque, perspiciatis error qui. Aperiam, architecto provident. -->
@@ -179,7 +179,7 @@
                             <div class="portfolio-content">
                                 <a href="http://young-ocean-16946.herokuapp.com/?">Node Chat App</a>
                                 <p>
-                                   This was created while obtaining my gold Badge from Eleven Fifty Academy. Of all the coding languages, I am least familiar with back end coding, such as Ajax. This chat app is fairly basic but functional. While at the ICI and eleven fifty training program, I worked highly talented people from a variety of different majors, with talents and expiries. We would often help each other with our projects, working together to complete our work.
+                                   This was created while obtaining my gold Badge from Eleven Fifty Academy. Of all the coding languages, I am least familiar with back end coding. This chat app is fairly basic but functional.
                                 </p>
                                 <p>
                                     <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis expedita repellendus laboriosam aliquid. Neque doloribus ea, id reprehenderit alias saepe debitis eligendi molestias odit, nesciunt rem. Dolorem saepe, provident dolore nesciunt laudantium nostrum enim natus veritatis harum maxime et iure ratione, nulla. Minus excepturi commodi tempore voluptate. Blanditiis similique dolor asperiores ex excepturi perspiciatis, dolores id esse. Voluptate beatae nesciunt cum esse ratione officiis necessitatibus blanditiis ea, laboriosam fugit vero maxime? Voluptatum illo dolorum autem pariatur quisquam. Voluptates soluta culpa necessitatibus veritatis tempora incidunt doloribus placeat repellat et facilis eum sapiente fugit numquam aut, laboriosam aspernatur, esse, magnam excepturi repudiandae amet voluptas nulla quidem. Veritatis nisi consequuntur saepe qui quisquam dignissimos assumenda, iusto odio. Dignissimos reprehenderit esse iusto cupiditate nisi enim, animi similique itaque, perspiciatis error qui. Aperiam, architecto provident. -->
@@ -190,6 +190,10 @@
                     </div>
                 </div>
             </section>
+
+
+
+
 
            <section class="works works-fit">
             <div class="container">
@@ -213,7 +217,7 @@
                             <figcaption>
                                 <h4>
                                     <a href="single-portfolio-public_relations.html">
-                                        Communication & Graphic Artwork        
+                                        Communication & Graphic Design        
                                     </a>
                                 </h4>
                                 <!--<p>
@@ -261,7 +265,7 @@
                             <figcaption>
                                 <h4>
                                     <a href="single-portfolio-coding.html">
-                                        Coding Work      
+                                        Coding     
                                     </a>
                                 </h4>
                                 <!--<p>
